src/parser_template/isolate/parser.output
Grammar

    0 $accept: module $end

    1 module: module_list

    2 module_item: NAMESPACE SYMBOL '{' module_list '}'
    3            | assignment

    4 module_list: module_item
    5            | module_list module_item

    6 assignment: compound_symbol '=' compound_reference
    7           | compound_symbol ADD_ASSIGN compound_reference
    8           | compound_symbol SUB_ASSIGN compound_reference
    9           | compound_symbol MUL_ASSIGN compound_reference
   10           | compound_symbol DIV_ASSIGN compound_reference
   11           | compound_symbol MOD_ASSIGN compound_reference

   12 native_type: INTEGER
   13            | UNSIGNED
   14            | FLOAT
   15            | STRING

   16 native_object_type: LIST
   17                   | DICT

   18 high_level_type: native_type
   19                | native_object_type
   20                | compound_symbol

   21 type_spec: high_level_type
   22          | CONST high_level_type

   23 array_reference: SYMBOL '[' expression ']'

   24 function_reference: SYMBOL '(' expression_list ')'
   25                   | SYMBOL '(' ')'

   26 compound_symbol: SYMBOL
   27                | compound_symbol '.' SYMBOL

   28 compound_refrence_element: SYMBOL
   29                          | array_reference
   30                          | function_reference

   31 compound_reference: compound_refrence_element
   32                   | compound_reference '.' compound_refrence_element

   33 expression: compound_reference
   34           | expression '+' expression
   35           | expression '-' expression
   36           | expression '*' expression
   37           | expression '/' expression
   38           | expression '%' expression
   39           | expression LT expression
   40           | expression GT expression
   41           | expression GEQU expression
   42           | expression LEQU expression
   43           | expression NEQU expression
   44           | expression EQU expression
   45           | expression AND expression
   46           | expression OR expression
   47           | '-' expression
   48           | NOT expression
   49           | ':' type_spec ':' expression
   50           | '(' expression ')'

   51 expression_list: expression
   52                | expression_list ',' expression


Terminals, with rules where they appear

    $end (0) 0
    '%' (37) 38
    '(' (40) 24 25 50
    ')' (41) 24 25 50
    '*' (42) 36
    '+' (43) 34
    ',' (44) 52
    '-' (45) 35 47
    '.' (46) 27 32
    '/' (47) 37
    ':' (58) 49
    '=' (61) 6
    '[' (91) 23
    ']' (93) 23
    '{' (123) 2
    '}' (125) 2
    error (256)
    NAMESPACE (258) 2
    SYMBOL (259) 2 23 24 25 26 27 28
    INTEGER (260) 12
    UNSIGNED (261) 13
    FLOAT (262) 14
    STRING (263) 15
    LIST (264) 16
    DICT (265) 17
    CONST (266) 22
    LEQU (267) 42
    GEQU (268) 41
    NEQU (269) 43
    EQU (270) 44
    LT (271) 39
    GT (272) 40
    AND (273) 45
    OR (274) 46
    NOT (275) 48
    ADD_ASSIGN (276) 7
    SUB_ASSIGN (277) 8
    MUL_ASSIGN (278) 9
    DIV_ASSIGN (279) 10
    MOD_ASSIGN (280) 11
    UNARY (281)


Nonterminals, with rules where they appear

    $accept (42)
        on left: 0
    module (43)
        on left: 1
        on right: 0
    module_item (44)
        on left: 2 3
        on right: 4 5
    module_list (45)
        on left: 4 5
        on right: 1 2 5
    assignment (46)
        on left: 6 7 8 9 10 11
        on right: 3
    native_type (47)
        on left: 12 13 14 15
        on right: 18
    native_object_type (48)
        on left: 16 17
        on right: 19
    high_level_type (49)
        on left: 18 19 20
        on right: 21 22
    type_spec (50)
        on left: 21 22
        on right: 49
    array_reference (51)
        on left: 23
        on right: 29
    function_reference (52)
        on left: 24 25
        on right: 30
    compound_symbol (53)
        on left: 26 27
        on right: 6 7 8 9 10 11 20 27
    compound_refrence_element (54)
        on left: 28 29 30
        on right: 31 32
    compound_reference (55)
        on left: 31 32
        on right: 6 7 8 9 10 11 32 33
    expression (56)
        on left: 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50
        on right: 23 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52
    expression_list (57)
        on left: 51 52
        on right: 24 52


State 0

    0 $accept: • module $end

    NAMESPACE  shift, and go to state 1
    SYMBOL     shift, and go to state 2

    module           go to state 3
    module_item      go to state 4
    module_list      go to state 5
    assignment       go to state 6
    compound_symbol  go to state 7


State 1

    2 module_item: NAMESPACE • SYMBOL '{' module_list '}'

    SYMBOL  shift, and go to state 8


State 2

   26 compound_symbol: SYMBOL •

    $default  reduce using rule 26 (compound_symbol)


State 3

    0 $accept: module • $end

    $end  shift, and go to state 9


State 4

    4 module_list: module_item •

    $default  reduce using rule 4 (module_list)


State 5

    1 module: module_list •
    5 module_list: module_list • module_item

    NAMESPACE  shift, and go to state 1
    SYMBOL     shift, and go to state 2

    $default  reduce using rule 1 (module)

    module_item      go to state 10
    assignment       go to state 6
    compound_symbol  go to state 7


State 6

    3 module_item: assignment •

    $default  reduce using rule 3 (module_item)


State 7

    6 assignment: compound_symbol • '=' compound_reference
    7           | compound_symbol • ADD_ASSIGN compound_reference
    8           | compound_symbol • SUB_ASSIGN compound_reference
    9           | compound_symbol • MUL_ASSIGN compound_reference
   10           | compound_symbol • DIV_ASSIGN compound_reference
   11           | compound_symbol • MOD_ASSIGN compound_reference
   27 compound_symbol: compound_symbol • '.' SYMBOL

    ADD_ASSIGN  shift, and go to state 11
    SUB_ASSIGN  shift, and go to state 12
    MUL_ASSIGN  shift, and go to state 13
    DIV_ASSIGN  shift, and go to state 14
    MOD_ASSIGN  shift, and go to state 15
    '='         shift, and go to state 16
    '.'         shift, and go to state 17


State 8

    2 module_item: NAMESPACE SYMBOL • '{' module_list '}'

    '{'  shift, and go to state 18


State 9

    0 $accept: module $end •

    $default  accept


State 10

    5 module_list: module_list module_item •

    $default  reduce using rule 5 (module_list)


State 11

    7 assignment: compound_symbol ADD_ASSIGN • compound_reference

    SYMBOL  shift, and go to state 19

    array_reference            go to state 20
    function_reference         go to state 21
    compound_refrence_element  go to state 22
    compound_reference         go to state 23


State 12

    8 assignment: compound_symbol SUB_ASSIGN • compound_reference

    SYMBOL  shift, and go to state 19

    array_reference            go to state 20
    function_reference         go to state 21
    compound_refrence_element  go to state 22
    compound_reference         go to state 24


State 13

    9 assignment: compound_symbol MUL_ASSIGN • compound_reference

    SYMBOL  shift, and go to state 19

    array_reference            go to state 20
    function_reference         go to state 21
    compound_refrence_element  go to state 22
    compound_reference         go to state 25


State 14

   10 assignment: compound_symbol DIV_ASSIGN • compound_reference

    SYMBOL  shift, and go to state 19

    array_reference            go to state 20
    function_reference         go to state 21
    compound_refrence_element  go to state 22
    compound_reference         go to state 26


State 15

   11 assignment: compound_symbol MOD_ASSIGN • compound_reference

    SYMBOL  shift, and go to state 19

    array_reference            go to state 20
    function_reference         go to state 21
    compound_refrence_element  go to state 22
    compound_reference         go to state 27


State 16

    6 assignment: compound_symbol '=' • compound_reference

    SYMBOL  shift, and go to state 19

    array_reference            go to state 20
    function_reference         go to state 21
    compound_refrence_element  go to state 22
    compound_reference         go to state 28


State 17

   27 compound_symbol: compound_symbol '.' • SYMBOL

    SYMBOL  shift, and go to state 29


State 18

    2 module_item: NAMESPACE SYMBOL '{' • module_list '}'

    NAMESPACE  shift, and go to state 1
    SYMBOL     shift, and go to state 2

    module_item      go to state 4
    module_list      go to state 30
    assignment       go to state 6
    compound_symbol  go to state 7


State 19

   23 array_reference: SYMBOL • '[' expression ']'
   24 function_reference: SYMBOL • '(' expression_list ')'
   25                   | SYMBOL • '(' ')'
   28 compound_refrence_element: SYMBOL •

    '['  shift, and go to state 31
    '('  shift, and go to state 32

    $default  reduce using rule 28 (compound_refrence_element)


State 20

   29 compound_refrence_element: array_reference •

    $default  reduce using rule 29 (compound_refrence_element)


State 21

   30 compound_refrence_element: function_reference •

    $default  reduce using rule 30 (compound_refrence_element)


State 22

   31 compound_reference: compound_refrence_element •

    $default  reduce using rule 31 (compound_reference)


State 23

    7 assignment: compound_symbol ADD_ASSIGN compound_reference •
   32 compound_reference: compound_reference • '.' compound_refrence_element

    '.'  shift, and go to state 33

    $default  reduce using rule 7 (assignment)


State 24

    8 assignment: compound_symbol SUB_ASSIGN compound_reference •
   32 compound_reference: compound_reference • '.' compound_refrence_element

    '.'  shift, and go to state 33

    $default  reduce using rule 8 (assignment)


State 25

    9 assignment: compound_symbol MUL_ASSIGN compound_reference •
   32 compound_reference: compound_reference • '.' compound_refrence_element

    '.'  shift, and go to state 33

    $default  reduce using rule 9 (assignment)


State 26

   10 assignment: compound_symbol DIV_ASSIGN compound_reference •
   32 compound_reference: compound_reference • '.' compound_refrence_element

    '.'  shift, and go to state 33

    $default  reduce using rule 10 (assignment)


State 27

   11 assignment: compound_symbol MOD_ASSIGN compound_reference •
   32 compound_reference: compound_reference • '.' compound_refrence_element

    '.'  shift, and go to state 33

    $default  reduce using rule 11 (assignment)


State 28

    6 assignment: compound_symbol '=' compound_reference •
   32 compound_reference: compound_reference • '.' compound_refrence_element

    '.'  shift, and go to state 33

    $default  reduce using rule 6 (assignment)


State 29

   27 compound_symbol: compound_symbol '.' SYMBOL •

    $default  reduce using rule 27 (compound_symbol)


State 30

    2 module_item: NAMESPACE SYMBOL '{' module_list • '}'
    5 module_list: module_list • module_item

    NAMESPACE  shift, and go to state 1
    SYMBOL     shift, and go to state 2
    '}'        shift, and go to state 34

    module_item      go to state 10
    assignment       go to state 6
    compound_symbol  go to state 7


State 31

   23 array_reference: SYMBOL '[' • expression ']'

    SYMBOL  shift, and go to state 19
    NOT     shift, and go to state 35
    '-'     shift, and go to state 36
    '('     shift, and go to state 37
    ':'     shift, and go to state 38

    array_reference            go to state 20
    function_reference         go to state 21
    compound_refrence_element  go to state 22
    compound_reference         go to state 39
    expression                 go to state 40


State 32

   24 function_reference: SYMBOL '(' • expression_list ')'
   25                   | SYMBOL '(' • ')'

    SYMBOL  shift, and go to state 19
    NOT     shift, and go to state 35
    '-'     shift, and go to state 36
    '('     shift, and go to state 37
    ')'     shift, and go to state 41
    ':'     shift, and go to state 38

    array_reference            go to state 20
    function_reference         go to state 21
    compound_refrence_element  go to state 22
    compound_reference         go to state 39
    expression                 go to state 42
    expression_list            go to state 43


State 33

   32 compound_reference: compound_reference '.' • compound_refrence_element

    SYMBOL  shift, and go to state 19

    array_reference            go to state 20
    function_reference         go to state 21
    compound_refrence_element  go to state 44


State 34

    2 module_item: NAMESPACE SYMBOL '{' module_list '}' •

    $default  reduce using rule 2 (module_item)


State 35

   48 expression: NOT • expression

    SYMBOL  shift, and go to state 19
    NOT     shift, and go to state 35
    '-'     shift, and go to state 36
    '('     shift, and go to state 37
    ':'     shift, and go to state 38

    array_reference            go to state 20
    function_reference         go to state 21
    compound_refrence_element  go to state 22
    compound_reference         go to state 39
    expression                 go to state 45


State 36

   47 expression: '-' • expression

    SYMBOL  shift, and go to state 19
    NOT     shift, and go to state 35
    '-'     shift, and go to state 36
    '('     shift, and go to state 37
    ':'     shift, and go to state 38

    array_reference            go to state 20
    function_reference         go to state 21
    compound_refrence_element  go to state 22
    compound_reference         go to state 39
    expression                 go to state 46


State 37

   50 expression: '(' • expression ')'

    SYMBOL  shift, and go to state 19
    NOT     shift, and go to state 35
    '-'     shift, and go to state 36
    '('     shift, and go to state 37
    ':'     shift, and go to state 38

    array_reference            go to state 20
    function_reference         go to state 21
    compound_refrence_element  go to state 22
    compound_reference         go to state 39
    expression                 go to state 47


State 38

   49 expression: ':' • type_spec ':' expression

    SYMBOL    shift, and go to state 2
    INTEGER   shift, and go to state 48
    UNSIGNED  shift, and go to state 49
    FLOAT     shift, and go to state 50
    STRING    shift, and go to state 51
    LIST      shift, and go to state 52
    DICT      shift, and go to state 53
    CONST     shift, and go to state 54

    native_type         go to state 55
    native_object_type  go to state 56
    high_level_type     go to state 57
    type_spec           go to state 58
    compound_symbol     go to state 59


State 39

   32 compound_reference: compound_reference • '.' compound_refrence_element
   33 expression: compound_reference •

    '.'  shift, and go to state 33

    $default  reduce using rule 33 (expression)


State 40

   23 array_reference: SYMBOL '[' expression • ']'
   34 expression: expression • '+' expression
   35           | expression • '-' expression
   36           | expression • '*' expression
   37           | expression • '/' expression
   38           | expression • '%' expression
   39           | expression • LT expression
   40           | expression • GT expression
   41           | expression • GEQU expression
   42           | expression • LEQU expression
   43           | expression • NEQU expression
   44           | expression • EQU expression
   45           | expression • AND expression
   46           | expression • OR expression

    LEQU  shift, and go to state 60
    GEQU  shift, and go to state 61
    NEQU  shift, and go to state 62
    EQU   shift, and go to state 63
    LT    shift, and go to state 64
    GT    shift, and go to state 65
    AND   shift, and go to state 66
    OR    shift, and go to state 67
    '+'   shift, and go to state 68
    '-'   shift, and go to state 69
    '*'   shift, and go to state 70
    '/'   shift, and go to state 71
    '%'   shift, and go to state 72
    ']'   shift, and go to state 73


State 41

   25 function_reference: SYMBOL '(' ')' •

    $default  reduce using rule 25 (function_reference)


State 42

   34 expression: expression • '+' expression
   35           | expression • '-' expression
   36           | expression • '*' expression
   37           | expression • '/' expression
   38           | expression • '%' expression
   39           | expression • LT expression
   40           | expression • GT expression
   41           | expression • GEQU expression
   42           | expression • LEQU expression
   43           | expression • NEQU expression
   44           | expression • EQU expression
   45           | expression • AND expression
   46           | expression • OR expression
   51 expression_list: expression •

    LEQU  shift, and go to state 60
    GEQU  shift, and go to state 61
    NEQU  shift, and go to state 62
    EQU   shift, and go to state 63
    LT    shift, and go to state 64
    GT    shift, and go to state 65
    AND   shift, and go to state 66
    OR    shift, and go to state 67
    '+'   shift, and go to state 68
    '-'   shift, and go to state 69
    '*'   shift, and go to state 70
    '/'   shift, and go to state 71
    '%'   shift, and go to state 72

    $default  reduce using rule 51 (expression_list)


State 43

   24 function_reference: SYMBOL '(' expression_list • ')'
   52 expression_list: expression_list • ',' expression

    ')'  shift, and go to state 74
    ','  shift, and go to state 75


State 44

   32 compound_reference: compound_reference '.' compound_refrence_element •

    $default  reduce using rule 32 (compound_reference)


State 45

   34 expression: expression • '+' expression
   35           | expression • '-' expression
   36           | expression • '*' expression
   37           | expression • '/' expression
   38           | expression • '%' expression
   39           | expression • LT expression
   40           | expression • GT expression
   41           | expression • GEQU expression
   42           | expression • LEQU expression
   43           | expression • NEQU expression
   44           | expression • EQU expression
   45           | expression • AND expression
   46           | expression • OR expression
   48           | NOT expression •

    $default  reduce using rule 48 (expression)


State 46

   34 expression: expression • '+' expression
   35           | expression • '-' expression
   36           | expression • '*' expression
   37           | expression • '/' expression
   38           | expression • '%' expression
   39           | expression • LT expression
   40           | expression • GT expression
   41           | expression • GEQU expression
   42           | expression • LEQU expression
   43           | expression • NEQU expression
   44           | expression • EQU expression
   45           | expression • AND expression
   46           | expression • OR expression
   47           | '-' expression •

    $default  reduce using rule 47 (expression)


State 47

   34 expression: expression • '+' expression
   35           | expression • '-' expression
   36           | expression • '*' expression
   37           | expression • '/' expression
   38           | expression • '%' expression
   39           | expression • LT expression
   40           | expression • GT expression
   41           | expression • GEQU expression
   42           | expression • LEQU expression
   43           | expression • NEQU expression
   44           | expression • EQU expression
   45           | expression • AND expression
   46           | expression • OR expression
   50           | '(' expression • ')'

    LEQU  shift, and go to state 60
    GEQU  shift, and go to state 61
    NEQU  shift, and go to state 62
    EQU   shift, and go to state 63
    LT    shift, and go to state 64
    GT    shift, and go to state 65
    AND   shift, and go to state 66
    OR    shift, and go to state 67
    '+'   shift, and go to state 68
    '-'   shift, and go to state 69
    '*'   shift, and go to state 70
    '/'   shift, and go to state 71
    '%'   shift, and go to state 72
    ')'   shift, and go to state 76


State 48

   12 native_type: INTEGER •

    $default  reduce using rule 12 (native_type)


State 49

   13 native_type: UNSIGNED •

    $default  reduce using rule 13 (native_type)


State 50

   14 native_type: FLOAT •

    $default  reduce using rule 14 (native_type)


State 51

   15 native_type: STRING •

    $default  reduce using rule 15 (native_type)


State 52

   16 native_object_type: LIST •

    $default  reduce using rule 16 (native_object_type)


State 53

   17 native_object_type: DICT •

    $default  reduce using rule 17 (native_object_type)


State 54

   22 type_spec: CONST • high_level_type

    SYMBOL    shift, and go to state 2
    INTEGER   shift, and go to state 48
    UNSIGNED  shift, and go to state 49
    FLOAT     shift, and go to state 50
    STRING    shift, and go to state 51
    LIST      shift, and go to state 52
    DICT      shift, and go to state 53

    native_type         go to state 55
    native_object_type  go to state 56
    high_level_type     go to state 77
    compound_symbol     go to state 59


State 55

   18 high_level_type: native_type •

    $default  reduce using rule 18 (high_level_type)


State 56

   19 high_level_type: native_object_type •

    $default  reduce using rule 19 (high_level_type)


State 57

   21 type_spec: high_level_type •

    $default  reduce using rule 21 (type_spec)


State 58

   49 expression: ':' type_spec • ':' expression

    ':'  shift, and go to state 78


State 59

   20 high_level_type: compound_symbol •
   27 compound_symbol: compound_symbol • '.' SYMBOL

    '.'  shift, and go to state 17

    $default  reduce using rule 20 (high_level_type)


State 60

   42 expression: expression LEQU • expression

    SYMBOL  shift, and go to state 19
    NOT     shift, and go to state 35
    '-'     shift, and go to state 36
    '('     shift, and go to state 37
    ':'     shift, and go to state 38

    array_reference            go to state 20
    function_reference         go to state 21
    compound_refrence_element  go to state 22
    compound_reference         go to state 39
    expression                 go to state 79


State 61

   41 expression: expression GEQU • expression

    SYMBOL  shift, and go to state 19
    NOT     shift, and go to state 35
    '-'     shift, and go to state 36
    '('     shift, and go to state 37
    ':'     shift, and go to state 38

    array_reference            go to state 20
    function_reference         go to state 21
    compound_refrence_element  go to state 22
    compound_reference         go to state 39
    expression                 go to state 80


State 62

   43 expression: expression NEQU • expression

    SYMBOL  shift, and go to state 19
    NOT     shift, and go to state 35
    '-'     shift, and go to state 36
    '('     shift, and go to state 37
    ':'     shift, and go to state 38

    array_reference            go to state 20
    function_reference         go to state 21
    compound_refrence_element  go to state 22
    compound_reference         go to state 39
    expression                 go to state 81


State 63

   44 expression: expression EQU • expression

    SYMBOL  shift, and go to state 19
    NOT     shift, and go to state 35
    '-'     shift, and go to state 36
    '('     shift, and go to state 37
    ':'     shift, and go to state 38

    array_reference            go to state 20
    function_reference         go to state 21
    compound_refrence_element  go to state 22
    compound_reference         go to state 39
    expression                 go to state 82


State 64

   39 expression: expression LT • expression

    SYMBOL  shift, and go to state 19
    NOT     shift, and go to state 35
    '-'     shift, and go to state 36
    '('     shift, and go to state 37
    ':'     shift, and go to state 38

    array_reference            go to state 20
    function_reference         go to state 21
    compound_refrence_element  go to state 22
    compound_reference         go to state 39
    expression                 go to state 83


State 65

   40 expression: expression GT • expression

    SYMBOL  shift, and go to state 19
    NOT     shift, and go to state 35
    '-'     shift, and go to state 36
    '('     shift, and go to state 37
    ':'     shift, and go to state 38

    array_reference            go to state 20
    function_reference         go to state 21
    compound_refrence_element  go to state 22
    compound_reference         go to state 39
    expression                 go to state 84


State 66

   45 expression: expression AND • expression

    SYMBOL  shift, and go to state 19
    NOT     shift, and go to state 35
    '-'     shift, and go to state 36
    '('     shift, and go to state 37
    ':'     shift, and go to state 38

    array_reference            go to state 20
    function_reference         go to state 21
    compound_refrence_element  go to state 22
    compound_reference         go to state 39
    expression                 go to state 85


State 67

   46 expression: expression OR • expression

    SYMBOL  shift, and go to state 19
    NOT     shift, and go to state 35
    '-'     shift, and go to state 36
    '('     shift, and go to state 37
    ':'     shift, and go to state 38

    array_reference            go to state 20
    function_reference         go to state 21
    compound_refrence_element  go to state 22
    compound_reference         go to state 39
    expression                 go to state 86


State 68

   34 expression: expression '+' • expression

    SYMBOL  shift, and go to state 19
    NOT     shift, and go to state 35
    '-'     shift, and go to state 36
    '('     shift, and go to state 37
    ':'     shift, and go to state 38

    array_reference            go to state 20
    function_reference         go to state 21
    compound_refrence_element  go to state 22
    compound_reference         go to state 39
    expression                 go to state 87


State 69

   35 expression: expression '-' • expression

    SYMBOL  shift, and go to state 19
    NOT     shift, and go to state 35
    '-'     shift, and go to state 36
    '('     shift, and go to state 37
    ':'     shift, and go to state 38

    array_reference            go to state 20
    function_reference         go to state 21
    compound_refrence_element  go to state 22
    compound_reference         go to state 39
    expression                 go to state 88


State 70

   36 expression: expression '*' • expression

    SYMBOL  shift, and go to state 19
    NOT     shift, and go to state 35
    '-'     shift, and go to state 36
    '('     shift, and go to state 37
    ':'     shift, and go to state 38

    array_reference            go to state 20
    function_reference         go to state 21
    compound_refrence_element  go to state 22
    compound_reference         go to state 39
    expression                 go to state 89


State 71

   37 expression: expression '/' • expression

    SYMBOL  shift, and go to state 19
    NOT     shift, and go to state 35
    '-'     shift, and go to state 36
    '('     shift, and go to state 37
    ':'     shift, and go to state 38

    array_reference            go to state 20
    function_reference         go to state 21
    compound_refrence_element  go to state 22
    compound_reference         go to state 39
    expression                 go to state 90


State 72

   38 expression: expression '%' • expression

    SYMBOL  shift, and go to state 19
    NOT     shift, and go to state 35
    '-'     shift, and go to state 36
    '('     shift, and go to state 37
    ':'     shift, and go to state 38

    array_reference            go to state 20
    function_reference         go to state 21
    compound_refrence_element  go to state 22
    compound_reference         go to state 39
    expression                 go to state 91


State 73

   23 array_reference: SYMBOL '[' expression ']' •

    $default  reduce using rule 23 (array_reference)


State 74

   24 function_reference: SYMBOL '(' expression_list ')' •

    $default  reduce using rule 24 (function_reference)


State 75

   52 expression_list: expression_list ',' • expression

    SYMBOL  shift, and go to state 19
    NOT     shift, and go to state 35
    '-'     shift, and go to state 36
    '('     shift, and go to state 37
    ':'     shift, and go to state 38

    array_reference            go to state 20
    function_reference         go to state 21
    compound_refrence_element  go to state 22
    compound_reference         go to state 39
    expression                 go to state 92


State 76

   50 expression: '(' expression ')' •

    $default  reduce using rule 50 (expression)


State 77

   22 type_spec: CONST high_level_type •

    $default  reduce using rule 22 (type_spec)


State 78

   49 expression: ':' type_spec ':' • expression

    SYMBOL  shift, and go to state 19
    NOT     shift, and go to state 35
    '-'     shift, and go to state 36
    '('     shift, and go to state 37
    ':'     shift, and go to state 38

    array_reference            go to state 20
    function_reference         go to state 21
    compound_refrence_element  go to state 22
    compound_reference         go to state 39
    expression                 go to state 93


State 79

   34 expression: expression • '+' expression
   35           | expression • '-' expression
   36           | expression • '*' expression
   37           | expression • '/' expression
   38           | expression • '%' expression
   39           | expression • LT expression
   40           | expression • GT expression
   41           | expression • GEQU expression
   42           | expression • LEQU expression
   42           | expression LEQU expression •
   43           | expression • NEQU expression
   44           | expression • EQU expression
   45           | expression • AND expression
   46           | expression • OR expression

    '+'  shift, and go to state 68
    '-'  shift, and go to state 69
    '*'  shift, and go to state 70
    '/'  shift, and go to state 71
    '%'  shift, and go to state 72

    $default  reduce using rule 42 (expression)


State 80

   34 expression: expression • '+' expression
   35           | expression • '-' expression
   36           | expression • '*' expression
   37           | expression • '/' expression
   38           | expression • '%' expression
   39           | expression • LT expression
   40           | expression • GT expression
   41           | expression • GEQU expression
   41           | expression GEQU expression •
   42           | expression • LEQU expression
   43           | expression • NEQU expression
   44           | expression • EQU expression
   45           | expression • AND expression
   46           | expression • OR expression

    '+'  shift, and go to state 68
    '-'  shift, and go to state 69
    '*'  shift, and go to state 70
    '/'  shift, and go to state 71
    '%'  shift, and go to state 72

    $default  reduce using rule 41 (expression)


State 81

   34 expression: expression • '+' expression
   35           | expression • '-' expression
   36           | expression • '*' expression
   37           | expression • '/' expression
   38           | expression • '%' expression
   39           | expression • LT expression
   40           | expression • GT expression
   41           | expression • GEQU expression
   42           | expression • LEQU expression
   43           | expression • NEQU expression
   43           | expression NEQU expression •
   44           | expression • EQU expression
   45           | expression • AND expression
   46           | expression • OR expression

    '+'  shift, and go to state 68
    '-'  shift, and go to state 69
    '*'  shift, and go to state 70
    '/'  shift, and go to state 71
    '%'  shift, and go to state 72

    $default  reduce using rule 43 (expression)


State 82

   34 expression: expression • '+' expression
   35           | expression • '-' expression
   36           | expression • '*' expression
   37           | expression • '/' expression
   38           | expression • '%' expression
   39           | expression • LT expression
   40           | expression • GT expression
   41           | expression • GEQU expression
   42           | expression • LEQU expression
   43           | expression • NEQU expression
   44           | expression • EQU expression
   44           | expression EQU expression •
   45           | expression • AND expression
   46           | expression • OR expression

    '+'  shift, and go to state 68
    '-'  shift, and go to state 69
    '*'  shift, and go to state 70
    '/'  shift, and go to state 71
    '%'  shift, and go to state 72

    $default  reduce using rule 44 (expression)


State 83

   34 expression: expression • '+' expression
   35           | expression • '-' expression
   36           | expression • '*' expression
   37           | expression • '/' expression
   38           | expression • '%' expression
   39           | expression • LT expression
   39           | expression LT expression •
   40           | expression • GT expression
   41           | expression • GEQU expression
   42           | expression • LEQU expression
   43           | expression • NEQU expression
   44           | expression • EQU expression
   45           | expression • AND expression
   46           | expression • OR expression

    '+'  shift, and go to state 68
    '-'  shift, and go to state 69
    '*'  shift, and go to state 70
    '/'  shift, and go to state 71
    '%'  shift, and go to state 72

    $default  reduce using rule 39 (expression)


State 84

   34 expression: expression • '+' expression
   35           | expression • '-' expression
   36           | expression • '*' expression
   37           | expression • '/' expression
   38           | expression • '%' expression
   39           | expression • LT expression
   40           | expression • GT expression
   40           | expression GT expression •
   41           | expression • GEQU expression
   42           | expression • LEQU expression
   43           | expression • NEQU expression
   44           | expression • EQU expression
   45           | expression • AND expression
   46           | expression • OR expression

    '+'  shift, and go to state 68
    '-'  shift, and go to state 69
    '*'  shift, and go to state 70
    '/'  shift, and go to state 71
    '%'  shift, and go to state 72

    $default  reduce using rule 40 (expression)


State 85

   34 expression: expression • '+' expression
   35           | expression • '-' expression
   36           | expression • '*' expression
   37           | expression • '/' expression
   38           | expression • '%' expression
   39           | expression • LT expression
   40           | expression • GT expression
   41           | expression • GEQU expression
   42           | expression • LEQU expression
   43           | expression • NEQU expression
   44           | expression • EQU expression
   45           | expression • AND expression
   45           | expression AND expression •
   46           | expression • OR expression

    LEQU  shift, and go to state 60
    GEQU  shift, and go to state 61
    NEQU  shift, and go to state 62
    EQU   shift, and go to state 63
    LT    shift, and go to state 64
    GT    shift, and go to state 65
    '+'   shift, and go to state 68
    '-'   shift, and go to state 69
    '*'   shift, and go to state 70
    '/'   shift, and go to state 71
    '%'   shift, and go to state 72

    $default  reduce using rule 45 (expression)


State 86

   34 expression: expression • '+' expression
   35           | expression • '-' expression
   36           | expression • '*' expression
   37           | expression • '/' expression
   38           | expression • '%' expression
   39           | expression • LT expression
   40           | expression • GT expression
   41           | expression • GEQU expression
   42           | expression • LEQU expression
   43           | expression • NEQU expression
   44           | expression • EQU expression
   45           | expression • AND expression
   46           | expression • OR expression
   46           | expression OR expression •

    LEQU  shift, and go to state 60
    GEQU  shift, and go to state 61
    NEQU  shift, and go to state 62
    EQU   shift, and go to state 63
    LT    shift, and go to state 64
    GT    shift, and go to state 65
    '+'   shift, and go to state 68
    '-'   shift, and go to state 69
    '*'   shift, and go to state 70
    '/'   shift, and go to state 71
    '%'   shift, and go to state 72

    $default  reduce using rule 46 (expression)


State 87

   34 expression: expression • '+' expression
   34           | expression '+' expression •
   35           | expression • '-' expression
   36           | expression • '*' expression
   37           | expression • '/' expression
   38           | expression • '%' expression
   39           | expression • LT expression
   40           | expression • GT expression
   41           | expression • GEQU expression
   42           | expression • LEQU expression
   43           | expression • NEQU expression
   44           | expression • EQU expression
   45           | expression • AND expression
   46           | expression • OR expression

    '*'  shift, and go to state 70
    '/'  shift, and go to state 71
    '%'  shift, and go to state 72

    $default  reduce using rule 34 (expression)


State 88

   34 expression: expression • '+' expression
   35           | expression • '-' expression
   35           | expression '-' expression •
   36           | expression • '*' expression
   37           | expression • '/' expression
   38           | expression • '%' expression
   39           | expression • LT expression
   40           | expression • GT expression
   41           | expression • GEQU expression
   42           | expression • LEQU expression
   43           | expression • NEQU expression
   44           | expression • EQU expression
   45           | expression • AND expression
   46           | expression • OR expression

    '*'  shift, and go to state 70
    '/'  shift, and go to state 71
    '%'  shift, and go to state 72

    $default  reduce using rule 35 (expression)


State 89
